Update MainApp.scala